--- a/css/style.css
+++ b/css/style.css
@@ -835,7 +835,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("/img/image-de-presentation.bmp");
+    background-image: url("/img/image-de-presentation_compressed.jpg");
 }
 #bloc-3-what-i-do h2{
     color:#F3976C!important;
