--- a/css/style.css
+++ b/css/style.css
@@ -66,10 +66,10 @@ a:hover {
 .bg-tr-edge,
 .bg-br-edge,
 .bg-repeat {
-    -webkit-background-size: auto!important;
+    /* -webkit-background-size: auto!important; */
     -moz-background-size: auto!important;
     -o-background-size: auto!important;
-    background-size: auto!important;
+    /* background-size: auto!important; */
 }
 
 .bg-repeat {
@@ -78,6 +78,7 @@ a:hover {
 
 .bg-t-edge {
     background: top no-repeat;
+    background-size: 100%;
 }
 
 .bloc-bg-texture::before {
@@ -91,8 +92,9 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("/img/texture-paper.png");
+    background: url("../img/texture-paper.png");
     background-size: 280px 280px;
+    
 }
 
 .b-parallax {
@@ -863,13 +865,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -887,21 +889,21 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
+    /* .bloc {
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
-    }
+    } */
     .bloc-group,
     .bloc-group .bloc {
         display: block;
         width: 100%;
     }
-    .bloc-fill-screen .fill-bloc-top-edge,
+    /* .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
-    }
+    } */
 }
 
 @media (max-width: 767px) {
