--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+.footer-bloc{
+    position: fixed!important;
+    bottom: 0;
+}
 
 a,
 button {
@@ -773,10 +777,6 @@ h4 {
 
 .bgc-white {
     background-color: #FFFFFF;
-}
-
-.footer-bloc{
-    margin-top: 130.5px;
 }
 
 .bgc-atomic-tangerine {
