--- a/css/style.css
+++ b/css/style.css
@@ -854,7 +854,15 @@ h4 {
         padding-left: 0;
         padding-right: 0;
     }
+    
 }
+
+@media (max-width: 768px){
+    .bg-t-edge{
+        background-size: 200%;
+    }
+}
+
 
 @media (max-width: 992px) and (min-width: 768px) {
     .navbar .nav {
