--- a/css/style.css
+++ b/css/style.css
@@ -710,6 +710,8 @@ p {
 }
 
 .social {
+    display: flex;
+    justify-content: space-evenly;
     max-width: 400px;
     margin: auto auto auto auto;
 }
